Agregando css comun, y footer

--- a/about-us.html
+++ b/about-us.html
@@ -9,7 +9,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/common.css" rel="stylesheet">
     <link href="css/about-us.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
@@ -128,78 +128,240 @@
                     <p>David J. Robbins</p>
                     <h6>Senior Vice President</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <div class="box fb">
-                        <i class="fa fa-facebook"></i>
-                    </div>
-                    <div class="box gp">
-                        <i class="fa fa-google-plus"></i>
-                    </div>
-                    <div class="box tw">
-                        <i class="fa fa-twitter"></i>
-                    </div>
-                    <div class="box in">
-                        <i class="fa fa-linkedin"></i>
-                    </div>
+                    <a href="">
+                        <div class="box fb">
+                            <i class="fa fa-facebook"></i>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="box gp">
+                            <i class="fa fa-google-plus"></i>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="box tw">
+                            <i class="fa fa-twitter"></i>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="box in">
+                            <i class="fa fa-linkedin"></i>
+                        </div>
+                    </a>                    
                 </div>
                 <div class="col-sm-3">
                     <img class="img-circle img-thumbnail" src="images/team-member.jpg" alt="">
                     <p>David J. Robbins</p>
                     <h6>Senior Vice President</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <div class="box fb">
-                        <i class="fa fa-facebook"></i>
-                    </div>
-                    <div class="box gp">
-                        <i class="fa fa-google-plus"></i>
-                    </div>
-                    <div class="box tw">
-                        <i class="fa fa-twitter"></i>
-                    </div>
-                    <div class="box in">
-                        <i class="fa fa-linkedin"></i>
-                    </div>
+                    <a href="">
+                        <div class="box fb">
+                            <i class="fa fa-facebook"></i>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="box gp">
+                            <i class="fa fa-google-plus"></i>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="box tw">
+                            <i class="fa fa-twitter"></i>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="box in">
+                            <i class="fa fa-linkedin"></i>
+                        </div>
+                    </a>                    
                 </div>
                 <div class="col-sm-3">
                     <img class="img-circle img-thumbnail" src="images/team-member.jpg" alt="">
                     <p>David J. Robbins</p>
                     <h6>Senior Vice President</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <div class="box fb">
-                        <i class="fa fa-facebook"></i>
-                    </div>
-                    <div class="box gp">
-                        <i class="fa fa-google-plus"></i>
-                    </div>
-                    <div class="box tw">
-                        <i class="fa fa-twitter"></i>
-                    </div>
-                    <div class="box in">
-                        <i class="fa fa-linkedin"></i>
-                    </div>
+                    <a href="">
+                        <div class="box fb">
+                            <i class="fa fa-facebook"></i>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="box gp">
+                            <i class="fa fa-google-plus"></i>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="box tw">
+                            <i class="fa fa-twitter"></i>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="box in">
+                            <i class="fa fa-linkedin"></i>
+                        </div>
+                    </a>                    
                 </div>
                 <div class="col-sm-3">
                     <img class="img-circle img-thumbnail" src="images/team-member.jpg" alt="">
                     <p>David J. Robbins</p>
                     <h6>Senior Vice President</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <div class="box fb">
-                        <i class="fa fa-facebook"></i>
-                    </div>
-                    <div class="box gp">
-                        <i class="fa fa-google-plus"></i>
-                    </div>
-                    <div class="box tw">
-                        <i class="fa fa-twitter"></i>
-                    </div>
-                    <div class="box in">
-                        <i class="fa fa-linkedin"></i>
-                    </div>
+                    <a href="">
+                        <div class="box fb">
+                            <i class="fa fa-facebook"></i>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="box gp">
+                            <i class="fa fa-google-plus"></i>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="box tw">
+                            <i class="fa fa-twitter"></i>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="box in">
+                            <i class="fa fa-linkedin"></i>
+                        </div>
+                    </a>                    
                 </div>
             </div>
 
         </div>
     </section>
 
+    <div class="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <h3>About Us</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates a sit architecto est accusamus, itaque blanditiis dolorem temporibus nihil facere ex asperiores magni ab iusto reiciendis inventore, nisi ad.</p>
+          </div>
+          <div class="col-md-3 fila">
+            <h3>Company</h3>
+            <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+            <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+            <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+            <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+            <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+             <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+             <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+            <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+            <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+          </div>
+
+          <div class="col-md-3">
+            <h3>Latest Blog</h3>
+            <div class="row foto">
+            <div class="col-md-4">
+            <a href="#">
+            <img class="media-objet" src="images/blog/thumb1.jpg">
+            </a>  
+            </div>
+            <div class="col-md-8">
+                <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+            </div>
+            </div>
+
+            <div class="row foto">
+            <div class="col-md-4">
+            <a href="#">
+            <img class="media-objet" src="images/blog/thumb2.jpg">
+            </a>  
+            </div>
+            <div class="col-md-8">
+                <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+            </div>
+            </div>
+
+            <div class="row foto">
+            <div class="col-md-4">
+            <a href="#">
+            <img class="media-objet" src="images/blog/thumb3.jpg">
+            </a>  
+            </div>
+            <div class="col-md-8">
+                <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+            </div>
+            </div>
+        </div>
+
+          <div class="col-md-3">
+            <h3>Address</h3>
+            <br>
+            <h5>Twitter, Inc</h5>
+            <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
+            <div class="go">
+                <h3>Newsletter</h3>
+            <div class="input-group">
+            <input type="text" class="form-control" placeholder="Enter your email">
+            <span class="input-group-btn">
+            <button class="btn btn-default" type="button">Go!</button>
+            </span>
+            </div>
+            </div>
+        </div>
+        </div>
+        </div>
+    </div>
+
+    <footer>
+    <div class="row">
+    <div class="col-md-6">
+        <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
+    </div>
+    <div class="col-md-6 footer-nav">
+        <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a class="page-scroll" href="#about">Home</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="#services">About Us</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="#portfolio">Contact Us</a>
+                        </li>
+        </ul>
+    </div>
+    </div>
+    </footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
