--- a/blog-item.html
+++ b/blog-item.html
@@ -9,7 +9,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/common.css" rel="stylesheet">
+    <link href="css/blog.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -19,10 +20,319 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head><!--/head-->
 <body>
-    <!-- Inserte código aqui -->
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">
+                    <img src="images/logo.png" alt="">
+                </a>
+            </div>
 
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a class="page-scroll" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="about-us.html">About Us</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="services.html">Services</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="blog.html">Blog</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>  
+    <section class="cabecera-verde">
+        <div class="container">
+            <div class="row vertical-centered-text">
+                <div class="col-sm-8">
+                    <h2>Blog</h2>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="col-sm-4 text-right">
+                    <a href="index.html"><strong>Home</strong></a> | Blog
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="content">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="box-white mt-2">
+                                <img class="img-full" src="images/blog/blog2.jpg" alt="">
+                                <div class="article">
+                                    <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+                                    <h6><i class="fa fa-user"></i> Jhon</h6>
+                                    <h6 class="pl-7"><i class="fa fa-folder"></i> Bootstrap</h6>
+                                    <h6 class="pl-7"><i class="fa fa-calendar"></i> Sept 16th, 2012</h6>
+                                    <h6 class="pl-7"><i class="fa fa-comment"></i> 0 Comments</h6>
+                                    <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam nisi ea placeat magnam eius? Voluptatibus ratione vero illum impedit cum incidunt, libero reiciendis eum aperiam perspiciatis deserunt modi porro ipsam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere aspernatur alias, reprehenderit impedit. Ipsum ea, neque accusamus, mollitia modi laudantium alias deleniti architecto natus facere expedita aspernatur quae aliquam, adipisci.</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta assumenda, sint accusantium distinctio ratione ducimus nihil sunt a! Molestias iure dolore iusto labore, amet dolor, assumenda ducimus tenetur dolorem dicta? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus optio sunt obcaecati adipisci ipsum dicta minus nesciunt neque officia quo deleniti magni voluptas delectus dolor dolorum ab, iure qui eaque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae possimus obcaecati atque similique cumque, aliquam illum commodi autem ipsam expedita omnis tempora beatae corrupti iusto iure blanditiis eligendi cum nulla!</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae illum ea dignissimos ullam eos assumenda asperiores quos autem in, quo quae quod velit totam nostrum facere consequuntur aut placeat aperiam!</p>
+                                    <hr>
+                                    <p><i class="fa fa-tags"></i> Tags
+                                        <span class="label label-primary">CSS3</span>
+                                        <span class="label label-primary">HTML5</span>
+                                        <span class="label label-primary">WordPress</span>
+                                        <span class="label label-primary">Joomla</span>
+                                    </p>
+                                    <div class="content">
+                                        <div class="media">
+                                          <div class="pull-left">
+                                            <img class="media-object img-thumbnail" src="images/blog/avatar.jpg" alt="...">
+                                          </div>
+                                          <div class="media-body">
+                                            <p><strong>John Doe</strong></p>
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam cum, modi in quos ab obcaecati quis laboriosam porro voluptatibus illum cupiditate quas eius eligendi similique voluptate molestiae dolorem fuga possimus?</p>
+                                          </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Search">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
+                                </span>
+                            </div><!-- /input-group -->
+                        </div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col-sm-6">
+                            <img class="img-rounded" src="images/ads/ad1.png" alt="">
+                        </div>
+                        <div class="col-sm-6">
+                            <img class="img-rounded" src="images/ads/ad2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="row mt-5">
+                        <div class="col-sm-6">
+                            <img class="img-rounded" src="images/ads/ad3.png" alt="">
+                        </div>
+                        <div class="col-sm-6">
+                            <img class="img-rounded" src="images/ads/ad4.png" alt="">
+                        </div>
+                    </div>
+                    <h3>Blog Categories</h3>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <ul>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Development</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Design</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Updates</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Tutorial</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> News</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <ul>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Joomla</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Wordpress</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Drupal</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Magento</a></li>
+                                <li><a href=""><i class="fa fa-angle-right"></i> Bootstrap</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3>Tag Cloud</h3>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <span class="label label-primary">CSS3</span>
+                            <span class="label label-primary">HTML5</span>
+                            <span class="label label-primary">WordPress</span>
+                            <span class="label label-primary">Joomla</span>
+                            <span class="label label-primary">Drupal</span>
+                            <span class="label label-primary">Bootstrap</span>
+                            <span class="label label-primary">JQuery</span>
+                            <span class="label label-primary">Tutorial</span>
+                            <span class="label label-primary">UpDate</span>
+                        </div>
+                    </div>
+                    <h3>Facebook fanpage</h3>
+                </div>
+            </div>
+            <nav>
+              <ul class="pagination">
+                <li>
+                  <a href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                  </a>
+                </li>
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">4</a></li>
+                <li><a href="#">5</a></li>
+                <li>
+                  <a href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+        </div>
+    </section>
+
+    <div class="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <h3>About Us</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid voluptates a sit architecto est accusamus, itaque blanditiis dolorem temporibus nihil facere ex asperiores magni ab iusto reiciendis inventore, nisi ad.</p>
+          </div>
+          <div class="col-md-3 fila">
+            <h3>Company</h3>
+            <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+            <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+            <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+            <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+            <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+             <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+             <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+            <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+
+            <a href="">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span>Finanzas y Fiscalizacion</span>
+            </a>
+          </div>
+
+          <div class="col-md-3">
+            <h3>Latest Blog</h3>
+            <div class="row foto">
+            <div class="col-md-4">
+            <a href="#">
+            <img class="media-objet" src="images/blog/thumb1.jpg">
+            </a>  
+            </div>
+            <div class="col-md-8">
+                <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+            </div>
+            </div>
+
+            <div class="row foto">
+            <div class="col-md-4">
+            <a href="#">
+            <img class="media-objet" src="images/blog/thumb2.jpg">
+            </a>  
+            </div>
+            <div class="col-md-8">
+                <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+            </div>
+            </div>
+
+            <div class="row foto">
+            <div class="col-md-4">
+            <a href="#">
+            <img class="media-objet" src="images/blog/thumb3.jpg">
+            </a>  
+            </div>
+            <div class="col-md-8">
+                <h5>Pellestenstqeue habitant morbi jonquielastamente huiahjart</h5> 
+            </div>
+            </div>
+        </div>
+
+          <div class="col-md-3">
+            <h3>Address</h3>
+            <br>
+            <h5>Twitter, Inc</h5>
+            <p>795 Folsom Ave, Suite 600 San Francisco CA 941077</p>
+            <div class="go">
+                <h3>Newsletter</h3>
+            <div class="input-group">
+            <input type="text" class="form-control" placeholder="Enter your email">
+            <span class="input-group-btn">
+            <button class="btn btn-default" type="button">Go!</button>
+            </span>
+            </div>
+            </div>
+        </div>
+        </div>
+        </div>
+    </div>
+
+    <footer>
+    <div class="row">
+    <div class="col-md-6">
+        <p>© 2013 ShapeBootstrap.All Rights Reserved</p>
+    </div>
+    <div class="col-md-6 footer-nav">
+        <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a class="page-scroll" href="#about">Home</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="#services">About Us</a>
+                        </li>
+                        <li>
+                            <a class="page-scroll" href="#portfolio">Contact Us</a>
+                        </li>
+        </ul>
+    </div>
+    </div>
+    </footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
